# qsio-kernel

./: README.md  changelog.md  mkdocs.yml  punchlist.md  pyproject.toml  release.md  taskchain.md
.github/workflows/: documentation-accessibility.yml  documentation.yml
docs/: accessibility-review-evidence.md  accessibility-review-profile-v1.json  alistaire-integration.md  api.md  architecture.md  design.md  governance.md  index.md  kernel-to-runtime-crosswalk-options.md  kernel-to-runtime-crosswalk-profile-v1.json  lifecycle.md  obstruction-and-gluing.md  onboarding.md  ontology.md  operations.md  runtime-conformance-boundary-profile.md  security.md  terminology.md  threat-model.md
docs/adr/: 0001-kernel-boundaries.md  0002-alistaire-kernel-role.md  0003-reference-conformance-boundary.md  0004-kernel-runtime-crosswalk-options.md
schemas/: nexis.schema.json  qsi.schema.json  qsio.schema.json  qso.schema.json  witness.schema.json
scripts/: validate_accessibility_docs.py
src/qsio/: __init__.py  canon.py  clock.py  demo.py  errors.py  ids.py  ledger.py  memora.py  nexis.py  qsi.py  qsio.py  qso.py  replay.py  serialization.py  telion.py  transition.py  types.py  validation.py  witness.py
src/qsio/runtime/: permissions.py  sanctum.py  scheduler.py
tests/: test_canon.py  test_provenance.py  test_qsio.py  test_qso.py  test_replay.py  test_security_boundaries.py
