[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qsio-kernel"
version = "0.1.0"
description = "First executable QSO/QSIO semantic kernel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Codex" }]

[project.scripts]
qsio-demo = "qsio.demo:main"

[project.optional-dependencies]
test = ["pytest>=9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
